updates to manuscript

--- a/branches/dTWA+BBGKY/LRLR.bib
+++ b/branches/dTWA+BBGKY/LRLR.bib
@@ -1123,13 +1123,15 @@
 	year = "2013"
 }
 
-PTkey = 	 {},
-
-OPTmonth = 	 {},
-
-OPTyear = 	 {},
-
-OPTannote = 	 {}
+@unpublished{Gong_etal_arXiv,
+	archiveprefix = "arXiv",
+	author = "Gong, Z.-X. and Foss-Feig, M. and Michalakis, S. and Gorshkov, A. V.",
+	eprint = "1401.6174v1",
+	optannote = "",
+	optkey = "",
+	optmonth = "",
+	optyear = "",
+	title = "{Persistence of Locality in Systems with Power-Law Interactions}"
 }
 
 @article{GongFossFeigMichalakisGorshkov14,
@@ -1948,6 +1950,16 @@ OPTannote = 	 {}
 	title = "{Stability and diffusion of surface clusters}",
 	volume = "10",
 	year = "1999"
+}
+
+@article{Ma_etal11,
+	author = "Ma, J. and Wang, X. and Sun, C. P. and Nori, F.",
+	doi = "10.1016/j.physrep.2011.08.003",
+	journal = "Phys. Rep.",
+	pages = "89--165",
+	title = "{Quantum spin squeezing}",
+	volume = "509",
+	year = "2011"
 }
 
 @article{MaKey93,
@@ -2893,6 +2905,16 @@ OPTannote = 	 {}
 	year = "1971"
 }
 
+@article{Wineland_etal92,
+	author = "Wineland, D. J. and Bollinger, J. J. and Itano, W. M. and Moore, F. L. and Heinzen, D. J.",
+	doi = "10.1103/PhysRevA.46.R6797",
+	journal = "Phys. Rev. A",
+	pages = "R6797--R6800",
+	title = "{Spin squeezing and reduced quantum noise in spectroscopy}",
+	volume = "46",
+	year = "1992"
+}
+
 @article{Wootters87,
 	author = "Wootters, W. K.",
 	doi = "10.1016/0003-4916(87)90176-X",
@@ -2987,33 +3009,7 @@ OPTannote = 	 {}
 	year = "2010"
 }
 
-@article{ssq1,
-	author = "{Sorensen A.} and {Duan L.-M.} and {Cirac J. I.} and {Zoller P.}",
-	doi = "10.1038/35051038",
-	issn = "0028-0836",
-	journal = "Nature",
-	month = "jan",
-	note = "10.1038/35051038",
-	number = "6816",
-	pages = "63--66",
-	risfield_0_m3 = "10.1038/35051038",
-	title = "{Many-particle entanglement with Bose-Einstein condensates}",
-	volume = "409",
-	year = "2001"
-}
-
-@article{ssq0,
-	author = "Wang, Xiaoguang and Sanders, Barry C.",
-	doi = "10.1103/PhysRevA.68.012101",
-	issue = "1",
-	journal = "Phys. Rev. A",
-	month = "Jul",
-	numpages = "6",
-	pages = "012101",
-	publisher = "American Physical Society",
-	title = "{Spin squeezing and pairwise entanglement for symmetric multiqubit states}",
-	url = "http://link.aps.org/doi/10.1103/PhysRevA.68.012101",
-	volume = "68",
-	year = "2003"
+@misc{Note1,
+	note = "See Supplemental Material"
 }
 
