--- a/trunk/chimera_disorder_free.tex
+++ b/trunk/chimera_disorder_free.tex
@@ -131,16 +131,16 @@ prb,
 	\section{\label{sec:level3}Coexistence of DTC \& DMBL}
 	
 	To see the emergence of the chimera state in our model, we will numerically calculate the local magnetization,$\left\langle{\hat{S}^z}\right\rangle_i = \expval{\hat{\sigma}^z_i}{\Psi(t)}$ of spin chain, for sufficiently longer time (up to 80 periods) for different $\beta = 0,1.5,2.5,\infty$ and different interaction strengths, weak($J_0 = 0.2/T$) and strong ($J_0 = 0.072/T$), following Sakurai's work~\cite{sakurai_phys_nodate}. To investigate the rigidity of our model, we set the rotational error $\epsilon_A = 0.03$, $\epsilon_B = 0.9$. Additionally, to see the emergence of the chimera state in our model, we consider periodic drive at $\hat{H}_2$ with high frequency $\omega=20$ for both cases where $\mathcal{J}_0(\varpi)$ with $\varpi = 4h/\omega$ is at the roots of $\mathcal{J}_0$ \textit{i.e.} the DL point and away from it. The results are shown in Fig.~\ref{Fig:strong_weak_ea}. 
-	
-	As shown in Fig.~\ref{Fig:strong_weak_ea}, at the DL points with strong coupling, the local magnetization for all types of spin-spin interaction shows periodic dynamics with double periods ($2T$) of the driving in region A, while that of region B is stable in time. Thus, regions A and B are the DTC and DMBL phases respectively. It indicates that two different phases of matter coexist in the same spin chain. Thus a chimera state emerges. In contrast, the system dynamics is unstable away from the DL point for both values of $J_0$. Similarly, in the weak interaction, the long-range $(\beta=0.0)$ shows stable DTC and DMBL phases. However, for intermediate($\beta = 1.5$), short-range ($\beta = 2.5$), and nearest neighbour range ($\beta = \infty$) interactions, DTC melts in a short period ($\sim$ 20 periods) in region A. These results are in agreement with previous work~\cite{sakurai_phys_nodate}.
-	
-	\begin{figure*}[t!]
+
+    \begin{figure*}[t!]
 		\centering
 		\includegraphics[width=17.5cm]{sz_t_strongweakJ_ea_N_8.pdf}
 		\caption{The time evolution of local magnetization for each spin at region A (Site(i)=0,1,2,3) and region B (Site(i)=4,5,6,7) is plotted for up to 80T, taking spin rotation error $\epsilon_A = 0.03$ and $\epsilon_B = 0.9$ with $g=\pi/T$.  In all three panels P, Q, and R, different spin-spin interactions such as long-range, intermediate range, short range, and nearest neighbor range are taken into account and plotted respectively from left to right, namely, (a, b,c,d) in the top row and (e,f,g,h) in the bottom row of each panel. The time evolution considering strong spin coupling ($J_0 = 0.2/T$) in the left panel (P) and weak spin coupling ($J_0 = 0.027/T$) in the middle panel (Q) is plotted  for the DL point (top panels of P \& Q) and away from the DL point (bottom panels of P \& Q). In the right panel (R), local magnetization for an effectively small spin rotational error $\epsilon_A = 0.05$ (top panel of R) and a larger $\epsilon_A = 0.1$ (bottom panel of R) are plotted at the DL point. At small $\epsilon_A=0.5$, the DTC-DMBL chimera is stable, while at $\epsilon_A=0.1$, DTC is stable only for long-range interaction, but in other spin ranges, the DTC phase melts at larger times.}
 		\label{Fig:strong_weak_ea}
 	\end{figure*}
 	
+	As shown in Fig.~\ref{Fig:strong_weak_ea}, at the DL points with strong coupling, the local magnetization for all types of spin-spin interaction shows periodic dynamics with double periods ($2T$) of the driving in region A, while that of region B is stable in time. Thus, regions A and B are the DTC and DMBL phases respectively. It indicates that two different phases of matter coexist in the same spin chain. Thus a chimera state emerges. In contrast, the system dynamics is unstable away from the DL point for both values of $J_0$. Similarly, in the weak interaction, the long-range $(\beta=0.0)$ shows stable DTC and DMBL phases. However, for intermediate($\beta = 1.5$), short-range ($\beta = 2.5$), and nearest neighbour range ($\beta = \infty$) interactions, DTC melts in a short period ($\sim$ 20 periods) in region A. These results are in agreement with previous work~\cite{sakurai_phys_nodate}.
+		
 	The stability of the DTC phase exhibits notable disparities between strong and weak coupling interactions. Specifically, even at the DL point, the DTC phase demonstrates greater stability in the presence of strong coupling as compared to weak coupling for interactions other than long-range interaction. The long-range interaction persists in a stable DTC for both strong and weak spin interactions. Thus the spin chain constitutes two existing simultaneous distinct phases of matter, a DTC and a ferromagnetic localized phase coupled together, manifesting a \textit{chimera} in the quantum spin chain. So in general, long-range coupling is the best candidate for constructing a DTC-ferromagnetic(DTC-DMBL) chimera.
 	
 	In addition, higher values of $\epsilon_A$ are applied to investigate the stability of DTC against larger rotational errors (see Fig.~\ref{Fig:strong_weak_ea}(R)). We have considered $\epsilon_A = 0.05$  and $0.1$ at fixed $\epsilon_B = 0.9$ for $\beta = (0.0, 1.5, 2.5, \infty$), fixed at DL points at strong coupling($J_0 = 0.2/T$). At a small $\epsilon_A=0.05$, DTC is stable for all types of spin-spin interactions. At large $\epsilon_A = 0.1$, the long-range($\beta=0$) DTC is stable, though, for other types of spin-spin interaction, DTC vanishes very fast, even after a couple of time periods. This corroborates the proffer that long-range interaction are the best choice for constructing a DTC-DMBL-chimera. 
@@ -156,7 +156,7 @@ prb,
 	
 	Similar to the original chimera DTC model~\cite{sakurai_phys_nodate}, we see that the rotation error $\epsilon_A$ plays an important role in chimera order in the spin system. To see this point, let us consider the extreme case, where $\epsilon_A=0$, then in Eq.~\eqref{eq:floq_eff3}  $H^\mathrm{eff}$ decouples into terms in regions A and B, \textit{i.e.}
 	\begin{multline}
-		H^{\mathrm{eff}}_{\epsilon_A=0} =  \frac{\hbar}{2}\Bigg( \sum_{l,m\in A} J_{lm} \hat{\sigma}^y_l\hat{\sigma}^y_m +\sum_{l,m\in B} J_{lm} \hat{\sigma}^y_l\hat{\sigma}^y_m\\+\frac{h }{\pi}\sum_{m \in B}\hat{\sigma}^z_m\Bigg).
+		H^{\mathrm{eff}}_{\epsilon_A=0} =  \frac{\hbar}{2}\Bigg( \sum_{l,m\in A} J_{lm} \hat{\sigma}^y_l\hat{\sigma}^y_m +\sum_{l,m\in B} J_{lm} \hat{\sigma}^y_l\hat{\sigma}^y_m\\+\frac{2h }{\pi}\sum_{m \in B}\hat{\sigma}^z_m\Bigg).
 	\end{multline}
 	At high drive  frequency, $\hat{\theta}_l \sim 0$. So when $0<\epsilon_A \ll 1$, the interaction term between two regions induced by $\epsilon_A$ depends on the $h$ and $\omega$ of the driving through the ratio $(4h/\omega)$. 
 	
@@ -320,7 +320,7 @@ prb,
 	\begin{equation}
 		H^{\mathrm{eff}}\vert_{\frac{3T}{2}, 2T} = \hbar\sum_{i\neq j} J_{ij} \hat{\sigma}^y_i \hat{\sigma}^y_{j} + \frac{4h\hbar}{T \omega}\sum_i\hat{\sigma}^z_i.
 	\end{equation} 
-	Let us consider, $\epsilon_A \neq 0$ and $\epsilon_B=1$. Also, we consider $\displaystyle \hat{V}_{\epsilon_A} = \exp\Big(\frac{i\epsilon_A \pi}{2}\sum_{l\in A}\hat{\sigma}^x_l\Big)$  and $\displaystyle \hat{\theta}_l = 2 \Big(\sum_{m \in B}J_{lm}\hat{\sigma}^y_m \frac{T}{2} \Big)$ which denotes a rotation acting on operator $\hat{\sigma}^y_l$, also we have contracted all the terms contributed from only region B. We consider, $\displaystyle \hat{H}_B =\hbar \Big(\sum_{l,m\in B} J_{lm} \hat{\sigma}^y_l\hat{\sigma}^y_m + \frac{4h}{\omega T}\sum_{m \in B}\hat{\sigma^z_m}\Big)$. So, we can write,		
+	Let us consider, $\epsilon_A \neq 0$ and $\epsilon_B=1$. Also, we consider $\displaystyle \hat{V}_{\epsilon_A} = \exp\Big(\frac{i\epsilon_A \pi}{2}\sum_{l\in A}\hat{\sigma}^x_l\Big)$  and $\displaystyle \hat{\theta}_l = 2 \Big(\sum_{m \in B}J_{lm}\hat{\sigma}^y_m \frac{T}{2} \Big)$ which denotes a rotation acting on operator $\hat{\sigma}^y_l$, also we have contracted all the terms contributed from only region B. We consider, $\displaystyle {H}_B = \Big(\sum_{l,m\in B} J_{lm} \hat{\sigma}^y_l\hat{\sigma}^y_m + \frac{4h}{\omega T}\sum_{m \in B}\hat{\sigma^z_m}\Big)$. So, we can write,		
 	\begin{multline}
 		\mathcal{T}\exp(-\frac{i}{\hbar}\int_{\frac{T}{2}}^{T} \hat{H}_2 dt) = \exp\Bigg[-i \Big[ \sum_{l,m\in A}J_{lm} \hat{\sigma}_l^y\hat{\sigma}_m^y +\sum_{l,m\in B}J_{lm}
 		\hat{\sigma_l^y}\hat{\sigma_m^y}-\sum_{\substack{%
